--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <svg viewBox="0 -32 576 576">
             <use href="img/svg/nav.svg#weather"></use>
           </svg>
-          <p class="nav-text">Weather</p>
+          <p class="nav-text">Météo</p>
         </div>
 
         <!-- 2nd item: cities  -->
@@ -31,7 +31,7 @@
           <svg viewBox="0 0 460.054 460.054">
             <use href="img/svg/nav.svg#options"></use>
           </svg>
-          <p class="nav-text">Cities</p>
+          <p class="nav-text">Villes</p>
         </div>
 
         <!-- 3rd item: map -->
@@ -39,7 +39,7 @@
           <svg viewBox="11 11 41 41">
             <use href="img/svg/nav.svg#details"></use>
           </svg>
-          <p class="nav-text">Details</p>
+          <p class="nav-text">Détails</p>
         </div>
 
         <!-- 4th item: settings -->
@@ -47,7 +47,7 @@
           <svg viewBox="0 0 32 32">
             <use href="img/svg/nav.svg#settings"></use>
           </svg>
-          <p class="nav-text">Settings</p>
+          <p class="nav-text">Réglages</p>
         </div>
         <div class="overlay"></div>
       </nav>
@@ -68,7 +68,7 @@
           </form>
           <div class="city"></div>
           <div class="hourly-forecast">
-            <p class="hourly-text">TODAY'S FORECAST</p>
+            <p class="hourly-text">PRÉVISIONS DU JOUR</p>
             <div class="hourly-content">
               <ul class="hourly-list"></ul>
             </div>
@@ -77,8 +77,8 @@
           <!-- start of details and weather conditions section -->
           <div class="weather-details">
             <div class="d-text-btn">
-              <p class="hourly-text">AIR CONDITIONS</p>
-              <button class="see-more">See more</button>
+              <p class="hourly-text">CONDITIONS D'AIR</p>
+              <button class="see-more">Plus</button>
             </div>
             <div class="d-details"></div>
           </div>
@@ -97,7 +97,7 @@
           <div class="empty-container"></div>
           <div class="s-d-forecast">
             <div class="s-d-text">
-              <p class="hourly-text">6-DAY FORECAST</p>
+              <p class="hourly-text">PRÉVISIONS SUR 6 JOURS</p>
             </div>
             <ul class="s-d-list"></ul>
           </div>
