--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 type="text"
                 name="city"
                 id=""
-                placeholder="Search for cities"
+                placeholder="Rechercher une ville"
               />
             </div>
           </form>
