--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <!-- start of details and weather conditions section -->
           <div class="weather-details">
             <div class="d-text-btn">
-              <p class="hourly-text">CONDITIONS D'AIR</p>
+              <p class="hourly-text">CONDITIONS DE L'AIR</p>
               <button class="see-more">Plus</button>
             </div>
             <div class="d-details"></div>
