--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 name="city"
                 id=""
                 placeholder="Rechercher une ville"
+                autocomplete="off"
               />
             </div>
           </form>
