--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <!-- start of seven day forecast section -->
         <div class="seven-day">
-          <div class="empty-container"></div>
+          <div class="empty-container"><p class="nav-text copyright">Météo Service<br><small>© 2024 <a href="https://muller.tel" target="_blank">Muller.Tel</a> by <a href="https://voipservices.fr" target="_blank">VOIPServices</a></small><br><i>Forked from Kravetskyi</i></p></div>
           <div class="s-d-forecast">
             <div class="s-d-text">
               <p class="hourly-text">PRÉVISIONS SUR 6 JOURS</p>
